--- a/eth2nt/package.json
+++ b/eth2nt/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.15.3",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "printf": "^0.2.5"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "MIT"
